--- a/charlas/ruby/scripting/scripting.pdf.html
+++ b/charlas/ruby/scripting/scripting.pdf.html
@@ -62,7 +62,7 @@ for princexml (CSS3 paged media support)
   
 
 <!-- _S9SLIDE_ -->
-<h1 id="i-love-ruby">I Love Ruby</h1>
+<h1 id="scripting-feliz">Scripting Feliz!</h1>
 
 <p><img src="../language/images/iloveruby.png" alt="" /></p>
 
@@ -72,7 +72,33 @@ for princexml (CSS3 paged media support)
 
 <section class="slide " id="2">
   <!-- _S9SLIDE_ -->
+<h1 id="presentación">Presentación</h1>
 
+<p>¡Muchas gracias!</p>
+
+<p>Me presento:</p>
+<pre><code>me = {
+  :name    =&gt; “David Vargas Ruiz”,
+  :studies =&gt; “Ing. Informático ULPGC”,
+  :job     = &gt; “Profesor FP Informática”,
+  :twitter =&gt; @dvarrui,
+  :github  =&gt; dvarrui,
+  :email   =&gt; dvarrui@protonmail.com
+}
+</code></pre>
+
+<p>Mi discurso está condicionado:</p>
+<ul>
+  <li><strong>Sysadmin</strong>: Profesor de sistemas operativos en ASIR</li>
+  <li><strong>Programación</strong>:
+    <ul>
+      <li>OOP y PF fan.</li>
+      <li>Trabajar bien, rápido y sin complicarse.</li>
+      <li>Dar a conocer Ruby más allá de Rails.</li>
+    </ul>
+  </li>
+  <li><strong>Software Libre</strong>: <em>¡Este es el camino!</em></li>
+</ul>
 
 
 
@@ -80,25 +106,25 @@ for princexml (CSS3 paged media support)
 
 <section class="slide " id="3">
   <!-- _S9SLIDE_ -->
-<h1 id="presentación">Presentación</h1>
+<h1 id="agenda">Agenda</h1>
 
-<pre><code>me = {
-  :name    =&gt; “David Vargas Ruiz”,
-  :studies =&gt; “Ing. Informático ULPGC”,
-  :job     = &gt; “Profesor FP Informática”,
-  :twitter =&gt; @dvarrui,
-  :github  =&gt; dvarrui,
-  :email   =&gt; dvarrui@protonmail.com
-}
-</code></pre>
+<ol>
+  <li>El problema</li>
+  <li>Scripting</li>
+  <li>Bash</li>
+  <li>Ruby</li>
+</ol>
 
+<p>#</p>
 
 
 </section>
 
 <section class="slide " id="4">
   <!-- _S9SLIDE_ -->
+<h1 id="scripting-feliz-1">Scripting Feliz!</h1>
 
+<p><img src="../language/images/iloveruby.png" alt="" /></p>
 
 
 
@@ -106,33 +132,59 @@ for princexml (CSS3 paged media support)
 
 <section class="slide " id="5">
   <!-- _S9SLIDE_ -->
-<h1 id="environment">Environment</h1>
+<h1 id="presentación-1">Presentación</h1>
 
-<pre><code>&gt; whoami
-Ruby
-Software Libre
-Starwars and
-Rock and Roll
+<p>¡Muchas gracias!</p>
+
+<p>Me presento:</p>
+<pre><code>me = {
+  :name    =&gt; “David Vargas Ruiz”,
+  :studies =&gt; “Ing. Informático ULPGC”,
+  :job     = &gt; “Profesor FP Informática”,
+  :twitter =&gt; @dvarrui,
+  :github  =&gt; dvarrui,
+  :email   =&gt; dvarrui@protonmail.com
+}
 </code></pre>
 
-<p>#</p>
+<p>Mi discurso está condicionado:</p>
+<ul>
+  <li><strong>Sysadmin</strong>: Profesor de sistemas operativos en ASIR</li>
+  <li><strong>Programación</strong>:
+    <ul>
+      <li>OOP y PF fan.</li>
+      <li>Trabajar bien, rápido y sin complicarse.</li>
+      <li>Dar a conocer Ruby más allá de Rails.</li>
+    </ul>
+  </li>
+  <li><strong>Software Libre</strong>: <em>¡Este es el camino!</em></li>
+</ul>
+
 
 
 </section>
 
 <section class="slide " id="6">
   <!-- _S9SLIDE_ -->
-<h1 id="i-love-ruby-1">I Love Ruby</h1>
+<h1 id="agenda-1">Agenda</h1>
 
-<p><img src="../language/images/iloveruby.png" alt="" /></p>
+<ol>
+  <li>El problema</li>
+  <li>Scripting</li>
+  <li>Bash</li>
+  <li>Ruby</li>
+</ol>
 
+<p>#</p>
 
 
 </section>
 
 <section class="slide " id="7">
   <!-- _S9SLIDE_ -->
+<h1 id="scripting-feliz-2">Scripting Feliz!</h1>
 
+<p><img src="../language/images/iloveruby.png" alt="" /></p>
 
 
 
@@ -140,8 +192,11 @@ Rock and Roll
 
 <section class="slide " id="8">
   <!-- _S9SLIDE_ -->
-<h1 id="presentación-1">Presentación</h1>
+<h1 id="presentación-2">Presentación</h1>
 
+<p>¡Muchas gracias!</p>
+
+<p>Me presento:</p>
 <pre><code>me = {
   :name    =&gt; “David Vargas Ruiz”,
   :studies =&gt; “Ing. Informático ULPGC”,
@@ -151,6 +206,19 @@ Rock and Roll
   :email   =&gt; dvarrui@protonmail.com
 }
 </code></pre>
+
+<p>Mi discurso está condicionado:</p>
+<ul>
+  <li><strong>Sysadmin</strong>: Profesor de sistemas operativos en ASIR</li>
+  <li><strong>Programación</strong>:
+    <ul>
+      <li>OOP y PF fan.</li>
+      <li>Trabajar bien, rápido y sin complicarse.</li>
+      <li>Dar a conocer Ruby más allá de Rails.</li>
+    </ul>
+  </li>
+  <li><strong>Software Libre</strong>: <em>¡Este es el camino!</em></li>
+</ul>
 
 
 
@@ -158,82 +226,14 @@ Rock and Roll
 
 <section class="slide " id="9">
   <!-- _S9SLIDE_ -->
+<h1 id="agenda-2">Agenda</h1>
 
-
-
-
-</section>
-
-<section class="slide " id="10">
-  <!-- _S9SLIDE_ -->
-<h1 id="environment-1">Environment</h1>
-
-<pre><code>&gt; whoami
-Ruby
-Software Libre
-Starwars and
-Rock and Roll
-</code></pre>
-
-<p>#</p>
-
-
-</section>
-
-<section class="slide " id="11">
-  <!-- _S9SLIDE_ -->
-<h1 id="i-love-ruby-2">I Love Ruby</h1>
-
-<p><img src="../language/images/iloveruby.png" alt="" /></p>
-
-
-
-</section>
-
-<section class="slide " id="12">
-  <!-- _S9SLIDE_ -->
-
-
-
-
-</section>
-
-<section class="slide " id="13">
-  <!-- _S9SLIDE_ -->
-<h1 id="presentación-2">Presentación</h1>
-
-<pre><code>me = {
-  :name    =&gt; “David Vargas Ruiz”,
-  :studies =&gt; “Ing. Informático ULPGC”,
-  :job     = &gt; “Profesor FP Informática”,
-  :twitter =&gt; @dvarrui,
-  :github  =&gt; dvarrui,
-  :email   =&gt; dvarrui@protonmail.com
-}
-</code></pre>
-
-
-
-</section>
-
-<section class="slide " id="14">
-  <!-- _S9SLIDE_ -->
-
-
-
-
-</section>
-
-<section class="slide " id="15">
-  <!-- _S9SLIDE_ -->
-<h1 id="environment-2">Environment</h1>
-
-<pre><code>&gt; whoami
-Ruby
-Software Libre
-Starwars and
-Rock and Roll
-</code></pre>
+<ol>
+  <li>El problema</li>
+  <li>Scripting</li>
+  <li>Bash</li>
+  <li>Ruby</li>
+</ol>
 
 
 </section>
