--- a/charlas/ruby/scripting/scripting.pdf.html
+++ b/charlas/ruby/scripting/scripting.pdf.html
@@ -115,16 +115,19 @@ for princexml (CSS3 paged media support)
   <li>Ruby</li>
 </ol>
 
-<p>#</p>
 
 
 </section>
 
 <section class="slide " id="4">
   <!-- _S9SLIDE_ -->
-<h1 id="scripting-feliz-1">Scripting Feliz!</h1>
+<h1 id="1-el-problema">1. El problema</h1>
 
-<p><img src="../language/images/iloveruby.png" alt="" /></p>
+<ul>
+  <li>Impartir el módulo de sistemas operativos en FP.</li>
+  <li>Poco tiempo para enseñar scripting: Bash(GNU/Linux), PowerShell(Windows).</li>
+  <li>Scripting = comandos del sistema + <em>“algo que los una de forma lógica”</em></li>
+</ul>
 
 
 
@@ -132,32 +135,38 @@ for princexml (CSS3 paged media support)
 
 <section class="slide " id="5">
   <!-- _S9SLIDE_ -->
-<h1 id="presentación-1">Presentación</h1>
+<h1 id="1-scripting">1. Scripting</h1>
 
-<p>¡Muchas gracias!</p>
-
-<p>Me presento:</p>
-<pre><code>me = {
-  :name    =&gt; “David Vargas Ruiz”,
-  :studies =&gt; “Ing. Informático ULPGC”,
-  :job     = &gt; “Profesor FP Informática”,
-  :twitter =&gt; @dvarrui,
-  :github  =&gt; dvarrui,
-  :email   =&gt; dvarrui@protonmail.com
-}
-</code></pre>
-
-<p>Mi discurso está condicionado:</p>
 <ul>
-  <li><strong>Sysadmin</strong>: Profesor de sistemas operativos en ASIR</li>
-  <li><strong>Programación</strong>:
-    <ul>
-      <li>OOP y PF fan.</li>
-      <li>Trabajar bien, rápido y sin complicarse.</li>
-      <li>Dar a conocer Ruby más allá de Rails.</li>
-    </ul>
-  </li>
-  <li><strong>Software Libre</strong>: <em>¡Este es el camino!</em></li>
+  <li>Los <strong>sysadmin/devops</strong> somos programadores… de scripts.</li>
+  <li>Principal objetivo: Automatizar.</li>
+</ul>
+
+<p><strong>Scripting: características</strong></p>
+
+<ul>
+  <li>Lenguaje interpretado.</li>
+  <li>Programa claro, sencillo y limpio.</li>
+  <li>Documentar sólo si es necesario (no debería serlo)</li>
+  <li>Cada fichero… un cometido (una misión u objetivo concreto)</li>
+  <li>Sólo mostrar mensajes cuando hay problemas.</li>
+  <li>Códigos de salida: <code>0 = OK</code>, <code>1 = Error</code></li>
+  <li>Programas NO interactivos. Nuestro objetivo es automatizar.</li>
+</ul>
+
+<blockquote>
+  <p>Lenguajes libres para hacer scripting multiplataforma Bash, Perl, Python… Ruby</p>
+</blockquote>
+
+<p>Vamos a seguir aprendiendo con ejemplos reales.
+Viendo código desde los más sencillo y que iremos complicando
+poco a poco.</p>
+
+<ul>
+  <li><a href="./03-show-info">show-info</a>: Hacer un que muestre alguna información del sistema en pantalla.</li>
+  <li><a href="./04-du-undo">do-undo</a>: Hacer uns script que cree directorios con determinados permisos.</li>
+  <li><a href="./05-radar">radar</a>: Hacer un script para “monitorizar” ciertos hosts.</li>
+  <li><a href="./06-software">software</a>: Configurar nuestra máquina con determinado software.</li>
 </ul>
 
 
@@ -166,74 +175,25 @@ for princexml (CSS3 paged media support)
 
 <section class="slide " id="6">
   <!-- _S9SLIDE_ -->
-<h1 id="agenda-1">Agenda</h1>
 
-<ol>
-  <li>El problema</li>
-  <li>Scripting</li>
-  <li>Bash</li>
-  <li>Ruby</li>
-</ol>
 
-<p>#</p>
 
 
 </section>
 
 <section class="slide " id="7">
   <!-- _S9SLIDE_ -->
-<h1 id="scripting-feliz-2">Scripting Feliz!</h1>
+<h1 id="anexo">ANEXO</h1>
 
-<p><img src="../language/images/iloveruby.png" alt="" /></p>
-
-
-
-</section>
-
-<section class="slide " id="8">
-  <!-- _S9SLIDE_ -->
-<h1 id="presentación-2">Presentación</h1>
-
-<p>¡Muchas gracias!</p>
-
-<p>Me presento:</p>
-<pre><code>me = {
-  :name    =&gt; “David Vargas Ruiz”,
-  :studies =&gt; “Ing. Informático ULPGC”,
-  :job     = &gt; “Profesor FP Informática”,
-  :twitter =&gt; @dvarrui,
-  :github  =&gt; dvarrui,
-  :email   =&gt; dvarrui@protonmail.com
-}
-</code></pre>
-
-<p>Mi discurso está condicionado:</p>
+<p><strong>Enlaces de interés:</strong></p>
 <ul>
-  <li><strong>Sysadmin</strong>: Profesor de sistemas operativos en ASIR</li>
-  <li><strong>Programación</strong>:
+  <li>Andrew Mallett (@theurbanpenguin): Ruby Scripting in Linux - See our mini-series of video tutorials!
     <ul>
-      <li>OOP y PF fan.</li>
-      <li>Trabajar bien, rápido y sin complicarse.</li>
-      <li>Dar a conocer Ruby más allá de Rails.</li>
+      <li>http://ow.ly/BYIi30nifgZ</li>
+      <li>https://www.theurbanpenguin.com/scripting-power-repetition/ruby-scripting-linux/</li>
     </ul>
   </li>
-  <li><strong>Software Libre</strong>: <em>¡Este es el camino!</em></li>
 </ul>
-
-
-
-</section>
-
-<section class="slide " id="9">
-  <!-- _S9SLIDE_ -->
-<h1 id="agenda-2">Agenda</h1>
-
-<ol>
-  <li>El problema</li>
-  <li>Scripting</li>
-  <li>Bash</li>
-  <li>Ruby</li>
-</ol>
 
 
 </section>
