--- a/charlas/asker/intro/asker.pdf.html
+++ b/charlas/asker/intro/asker.pdf.html
@@ -67,6 +67,8 @@ for princexml (CSS3 paged media support)
 <pre><code>Tu generador de preguntas para Moodle
 </code></pre>
 
+<p><img src="images/logo.png" alt="" /></p>
+
 
 
 </section>
@@ -83,8 +85,8 @@ for princexml (CSS3 paged media support)
       <li>Profesor de ciencias en Secundaria.</li>
     </ul>
   </li>
-  <li>Comunidad Telegram: https://t.me/+FsuphhJSaaGVpKcv)</li>
-  <li>Teuton Software</li>
+  <li>Comunidad Telegram: https://t.me/+FsuphhJSaaGVpKcv</li>
+  <li>Equipo <em>Teuton Software</em></li>
 </ul>
 
 <p><img src="images/ujilliurex.png" alt="" /></p>
@@ -266,18 +268,23 @@ for princexml (CSS3 paged media support)
 
 <ul>
   <li>Fichero en texto plano.</li>
-  <li>Context</li>
-  <li>Concept: names</li>
-  <li>Concept: tags</li>
-  <li>Concept: defs</li>
+  <li><strong>Context</strong></li>
+  <li>Concept: <strong>names</strong></li>
+  <li>Concept: <strong>tags</strong></li>
+  <li>Concept: <strong>defs</strong></li>
 </ul>
 
 <pre><code>¿Dónde encuentro ejemplos para no empezar de cero?
 </code></pre>
 
+<p>Ejemplos en la documentación de Asker:</p>
 <ul>
-  <li>Ejemplos en la documentación de Asker: <strong>https://github.com/teuton-software/asker/tree/master/docs/examples</strong></li>
-  <li>Inputs reales usados en FP: <strong>https://github.com/dvarrui/asker-inputs</strong></li>
+  <li><strong>https://github.com/teuton-software/asker/tree/master/docs/examples</strong></li>
+</ul>
+
+<p>Inputs reales usados en FP Informática:</p>
+<ul>
+  <li><strong>https://github.com/dvarrui/asker-inputs</strong></li>
 </ul>
 
 
@@ -289,8 +296,8 @@ for princexml (CSS3 paged media support)
 <h1 id="16-mejorando-el-input">16. Mejorando el input</h1>
 
 <ul>
-  <li>Concept: tables y rows</li>
-  <li>Concept: def con ficheros</li>
+  <li>Concept: <strong>tables</strong> y <strong>rows</strong></li>
+  <li>Concept: <strong>def</strong> con ficheros</li>
   <li>Creando más ficheros HAML en la misma carpeta.</li>
 </ul>
 
@@ -305,14 +312,13 @@ for princexml (CSS3 paged media support)
 <h1 id="17-cómo-aprender-más-sobre-asker">17. Cómo aprender más sobre Asker</h1>
 
 <ul>
-  <li>Documentación:
+  <li><strong>Documentación</strong>:
     <ul>
       <li>GitHub: https://github.com/teuton-software/asker</li>
       <li>Rubygems: https://rubygems/gems/asker-tool</li>
     </ul>
   </li>
-  <li>Grupo de Telegram:</li>
-  <li>email: <code>teuton.software@protonmail.com</code></li>
+  <li>O ponte en contacto con nuestra pequeña comunidad.</li>
 </ul>
 
 <p><img src="images/github-asker-docs.png" alt="" /></p>
@@ -325,9 +331,15 @@ for princexml (CSS3 paged media support)
   <!-- _S9SLIDE_ -->
 <h1 id="18-ideas-para-el-futuro">18. Ideas para el futuro</h1>
 
+<pre><code>Todavía tenemos muchas peticiones que ir implementando...
+</code></pre>
+
+<p>Nuestro plan para el 2022</p>
 <ul>
-  <li>Nuestro plan para el 2022: <strong>https://github.com/teuton-software/asker/blob/master/docs/todo.md</strong></li>
-  <li>Desarrollo abierto.</li>
+  <li>https://github.com/teuton-software/asker/blob/master/docs/todo.md</li>
+  <li>Promoción</li>
+  <li>Desarrollo abierto y colaborativo</li>
+  <li>Reuniones</li>
 </ul>
 
 
@@ -342,9 +354,9 @@ for princexml (CSS3 paged media support)
 </code></pre>
 
 <ul>
-  <li>GitHub: @teuton-software</li>
-  <li>Email: <code>teuton-software@protonmail.com</code></li>
-  <li>Comunidad Asker: https://t.me/+FsuphhJSaaGVpKcv)</li>
+  <li><strong>GitHub</strong>: @teuton-software</li>
+  <li>Grupo de <strong>Telegram</strong>: https://t.me/+FsuphhJSaaGVpKcv</li>
+  <li><strong>Email</strong>: <code>teuton.software@protonmail.com</code></li>
 </ul>
 
 <p><img src="images/teuton-software.png" alt="" /></p>
