--- a/charlas/asker/intro/asker.pdf.html
+++ b/charlas/asker/intro/asker.pdf.html
@@ -67,7 +67,7 @@ for princexml (CSS3 paged media support)
 <pre><code>Tu generador de preguntas para Moodle
 </code></pre>
 
-<p><img src="images/logo.png" alt="" /></p>
+<p><img src="images/teuton-software.png" alt="" /></p>
 
 
 
@@ -86,7 +86,7 @@ for princexml (CSS3 paged media support)
     </ul>
   </li>
   <li>Comunidad Telegram: https://t.me/+FsuphhJSaaGVpKcv</li>
-  <li>Equipo <em>Teuton Software</em></li>
+  <li>Equipo <em>Teuton Software</em> (@TeutonSoftware)</li>
 </ul>
 
 <p><img src="images/ujilliurex.png" alt="" /></p>
@@ -354,12 +354,12 @@ for princexml (CSS3 paged media support)
 </code></pre>
 
 <ul>
-  <li><strong>GitHub</strong>: @teuton-software</li>
-  <li>Grupo de <strong>Telegram</strong>: https://t.me/+FsuphhJSaaGVpKcv</li>
+  <li><strong>GitHub</strong>: <code>@teuton-software</code></li>
+  <li>Grupo de <strong>Telegram</strong>: <code>https://t.me/+FsuphhJSaaGVpKcv</code></li>
   <li><strong>Email</strong>: <code>teuton.software@protonmail.com</code></li>
 </ul>
 
-<p><img src="images/teuton-software.png" alt="" /></p>
+<p><img src="images/logo.png" alt="" /></p>
 
 
 </section>
