--- a/charlas/asker/intro/asker.pdf.html
+++ b/charlas/asker/intro/asker.pdf.html
@@ -78,15 +78,15 @@ for princexml (CSS3 paged media support)
 <h1 id="1-agradecimientos">1. Agradecimientos</h1>
 
 <ul>
-  <li>Organización Ujilliurex</li>
-  <li>Baltasar Ortega Bort (Twitter: @baltolkien)
+  <li>Organización <strong>Ujilliurex</strong></li>
+  <li><strong>Baltasar Ortega Bort</strong> (Twitter: @baltolkien)
     <ul>
       <li>Fundador de KDE blog (https://www.kdeblog.com/author/balta)</li>
       <li>Profesor de ciencias en Secundaria.</li>
     </ul>
   </li>
-  <li>Comunidad Telegram: https://t.me/+FsuphhJSaaGVpKcv</li>
-  <li>Equipo <em>Teuton Software</em> (@TeutonSoftware)</li>
+  <li>Comunidad Asker <strong>Telegram</strong></li>
+  <li>Equipo <strong>Teuton Software</strong></li>
 </ul>
 
 <p><img src="images/ujilliurex.png" alt="" /></p>
@@ -120,7 +120,7 @@ for princexml (CSS3 paged media support)
 </code></pre>
 <ul>
   <li>Corregir es aburrido, pero el <strong>feedback</strong> es muy importante.</li>
-  <li>Buscar formas/herramientas para <strong>automatizar tareas</strong>.</li>
+  <li>Buscar formas/herramientas para <strong>automatizar tareas</strong> (<em>Lo reconozco… soy más informático que profesor</em>)</li>
   <li>Moodle nos ayuda mucho.</li>
   <li>Los cuestionarios de Moodle se corrigen solos pero… las preguntas hay que crearlas.</li>
 </ul>
