--- a/charlas/ruby/scripting/slides/scripting.html
+++ b/charlas/ruby/scripting/slides/scripting.html
@@ -104,14 +104,13 @@
 <pre><code>[+] 2013 - Visita a la central de OpenSUSE en Nürenberg
 </code></pre>
 
-<p>Lenguajes de scripting:</p>
 <ul>
-  <li><strong>Ruby</strong>, Python y Perl.</li>
-</ul>
-
-<p>Herramientas:</p>
-<ul>
-  <li>Brew, Yast, Vagrant, Metasploit, Rails(GitHub, Shopify), etc.</li>
+  <li>
+    <p>Lenguajes de scripting: <strong>Ruby</strong>, Python y Perl.</p>
+  </li>
+  <li>
+    <p>Herramientas: Brew, <strong>Yast</strong>, <strong>Vagrant</strong>, Metasploit, Rails(<strong>GitHub</strong>, Shopify), etc.</p>
+  </li>
 </ul>
 
 
