--- a/charlas/ruby/scripting/slides/scripting.w3c.html
+++ b/charlas/ruby/scripting/slides/scripting.w3c.html
@@ -155,31 +155,7 @@ src="graphics/w3c-logo-white.gif" /></a></object></div>
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="6-the-urban-penguin">6. The Urban Penguin</h1>
-
-<ul>
-  <li>Andrew Mallett (@theurbanpenguin)</li>
-  <li>Ruby Scripting in Linux - See our mini-series of video tutorials!
-    <ul>
-      <li>http://ow.ly/BYIi30nifgZ</li>
-      <li>https://www.theurbanpenguin.com/scripting-power-repetition/ruby-scripting-linux/</li>
-    </ul>
-  </li>
-</ul>
-
-<pre><code>[?] Pero entonces... ¿qué es y qué no es scripting?
-</code></pre>
-<ul>
-  <li>No encuentro consenso</li>
-</ul>
-
-
-
-  </div>
-
-  <div class="slide">
-    <!-- _S9SLIDE_ -->
-<h1 id="7-definir-scripting">7. Definir scripting</h1>
+<h1 id="6-definir-scripting">6. Definir scripting</h1>
 
 <p>Definición personal:</p>
 <ul>
@@ -204,7 +180,7 @@ src="graphics/w3c-logo-white.gif" /></a></object></div>
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="8-instalación-de-ruby">8. Instalación de Ruby</h1>
+<h1 id="7-instalación-de-ruby">7. Instalación de Ruby</h1>
 
 <p><img src="images/instalacion.png" alt="" /></p>
 
@@ -218,7 +194,7 @@ src="graphics/w3c-logo-white.gif" /></a></object></div>
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="9-variables">9. Variables</h1>
+<h1 id="8-variables">8. Variables</h1>
 
 <p><img src="images/tipos-de-datos.png" alt="" /></p>
 
@@ -233,7 +209,7 @@ src="graphics/w3c-logo-white.gif" /></a></object></div>
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="10-estructuras-condicional">10. Estructuras condicional</h1>
+<h1 id="9-estructuras-condicional">9. Estructuras condicional</h1>
 
 <p><img src="images/condicional.png" alt="" /></p>
 
@@ -252,7 +228,7 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="11-filosofía-de-ruby">11. Filosofía de Ruby</h1>
+<h1 id="10-filosofía-de-ruby">10. Filosofía de Ruby</h1>
 
 <pre><code>[ Principio 1 ] Buscar la felicidad del programador!
 </code></pre>
@@ -261,8 +237,7 @@ end
   <li>Ruby está orientado a <strong>“reducir” el tiempo del ser humano</strong>.</li>
 </ul>
 
-<pre><code>[?] ¿Esto es muy subjetivo?... ¿Cómo lo hacemos en realidad?_
-</code></pre>
+<p><em>¿Esto es muy subjetivo?… ¿Cómo lo hacemos en realidad?</em></p>
 
 <ul>
   <li><strong>Principio de menor sorpresa</strong>.</li>
@@ -279,7 +254,7 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="12-los-iteradores">12. Los iteradores</h1>
+<h1 id="11-los-iteradores">11. Los iteradores</h1>
 
 <p><img src="images/iterador-for.png" alt="" /></p>
 
@@ -287,7 +262,7 @@ end
 
 <p><img src="images/bucle-while.png" alt="" /></p>
 
-<pre><code>[!] Hay muchas otras formas de hacer bucles e iterar...
+<pre><code>Hay muchas otras formas de hacer bucles e iterar...
 </code></pre>
 
 
@@ -296,7 +271,7 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="13-métodos-y-funciones">13. Métodos y funciones:</h1>
+<h1 id="12-métodos-y-funciones">12. Métodos y funciones:</h1>
 
 <p>Método</p>
 
@@ -312,7 +287,7 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="14-ejecutar-comandos">14. Ejecutar comandos</h1>
+<h1 id="13-ejecutar-comandos">13. Ejecutar comandos</h1>
 
 <p>La instrucción <code>system</code> ejecuta un comando del sistema y devuelve <code>true/false</code>.</p>
 
@@ -324,9 +299,9 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="15-ejecutar-comandos-para-lectura">15. Ejecutar comandos para lectura</h1>
+<h1 id="14-ejecutar-comandos-para-lectura">14. Ejecutar comandos para lectura</h1>
 
-<p>La instrucción <code>%x()</code> o “comillas inclinadas” sirven para:</p>
+<p>La instrucción <code>%x()</code> o “comillas inclinadas” sirve para:</p>
 <ol>
   <li>Ejecutar un comando del sistema y</li>
   <li>guardar la salida en una variable.</li>
@@ -340,7 +315,7 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="18-entrada-al-script">18. Entrada al script</h1>
+<h1 id="15-entrada-al-script">15. Entrada al script</h1>
 
 <p><img src="images/entrada-de-datos.png" alt="" /></p>
 
@@ -350,7 +325,7 @@ end
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="19-ejemplo-en-bash">19. Ejemplo en Bash</h1>
+<h1 id="16-ejemplo-en-bash">16. Ejemplo en Bash</h1>
 
 <p><img src="images/whoami.sh.png" alt="" /></p>
 
@@ -380,7 +355,7 @@ exit 0
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="20-ejemplo-en-ruby">20. Ejemplo en Ruby</h1>
+<h1 id="17-ejemplo-en-ruby">17. Ejemplo en Ruby</h1>
 
 <p><img src="images/whoami.rb.png" alt="" /></p>
 
@@ -406,7 +381,7 @@ exit 0
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="19-mis-conclusiones">19. Mis conclusiones</h1>
+<h1 id="18-resumen">18. Resumen</h1>
 
 <ul>
   <li>Ruby es ideal para el aprendizaje.</li>
@@ -424,7 +399,7 @@ exit 0
 
   <div class="slide">
     <!-- _S9SLIDE_ -->
-<h1 id="20-fin">20. Fin</h1>
+<h1 id="19-fin">19. Fin</h1>
 
 <pre><code>puts "Muchas gracias!" * 1000
 </code></pre>
