--- a/charlas/ruby/scripting/slides/scripting.html
+++ b/charlas/ruby/scripting/slides/scripting.html
@@ -101,7 +101,7 @@
   <li>Cambiar a un lenguaje de scripting mutiplataforma: ¿?</li>
 </ol>
 
-<pre><code>[+] 2013 - Visita a la central de OpenSUSE en Nürenberg
+<pre><code>(2013) Visita a la central de OpenSUSE en Nürenberg
 </code></pre>
 
 <ul>
@@ -129,7 +129,7 @@
   <li>Comandos: Programas sin entorno gráfico.</li>
 </ul>
 
-<pre><code>[!] SCRIPTING = comandos_del_sistema() + "algo que los una de forma lógica"
+<pre><code>SCRIPTING = comandos_del_sistema() + "algo que los una de forma lógica"
 </code></pre>
 
 <ul>
@@ -348,14 +348,14 @@ exit 0
 <h1 id="18-resumen">18. Resumen</h1>
 
 <ul>
-  <li>Ruby es ideal para el aprendizaje.</li>
-  <li>Transformación directa desde el pseudocódigo.</li>
+  <li>Ruby es ideal para <strong>aprender</strong> a programar.</li>
+  <li>Transformación directa desde <strong>pseudocódigo</strong>.</li>
   <li>Transformación directa desde Bash.</li>
-  <li>Se escribe casi como en inglés natural.</li>
-  <li>Las empresas usan Ruby y Python como lenguages de scripting.</li>
+  <li>Se escribe casi como en <strong>inglés natural</strong>.</li>
+  <li>Las <strong>empresas usan Ruby</strong> y Python como lenguages de scripting.</li>
 </ul>
 
-<p><img src="iamge/rubygems.png" alt="" /></p>
+<p><img src="images/rubygems.png" alt="" /></p>
 
 
 
