--- a/charlas/ruby/scripting/slides/scripting.html
+++ b/charlas/ruby/scripting/slides/scripting.html
@@ -371,7 +371,7 @@ exit 0
 <ul>
   <li><strong>GitHub</strong>: <code>@dvarrui</code></li>
   <li><strong>Email</strong>: <code>dvarrui@protonmail.com</code></li>
-  <li><strong>Presentación</strong>: <code>https://github.com/dvarrui/proyectos-de-ejemplo/tree/master/charlas/ruby/scripting/slides</code></li>
+  <li><strong>Presentación</strong>: https://github.com/dvarrui/proyectos-de-ejemplo/tree/master/charlas/ruby/scripting/slides</li>
 </ul>
 
 <p><img src="images/puerto-de-la-cruz.png" alt="" /></p>
