--- a/charlas/asker/ecomputing.22/asker.html
+++ b/charlas/asker/ecomputing.22/asker.html
@@ -45,6 +45,8 @@
 
 <ul>
   <li>Organización.</li>
+  <li>Software Libre</li>
+  <li>Lenguage de programación <strong>Ruby</strong></li>
   <li>Comunidad Asker <strong>Telegram</strong></li>
   <li>Equipo <strong>Teuton Software</strong></li>
 </ul>
@@ -61,7 +63,6 @@
 
 <ul>
   <li>David Vargas Ruiz</li>
-  <li>Ingeniero Informático por la ULPGC</li>
   <li>Profesor FP de Sistemas (IES Puerto de la Cruz).</li>
   <li>Ruby, software libre y StarWars.</li>
 </ul>
@@ -192,7 +193,7 @@
 
 <ul>
   <li>Fichero de texto.</li>
-  <li>Mapa conceptual sin enlaces explícitos.</li>
+  <li>Una especie de <em>“Mapa conceptual” sin enlaces explícitos</em>.</li>
   <li>Formato de entrada HAML y/o XML.</li>
 </ul>
 
