--- a/charlas/asker/ecomputing.22/asker.pdf.html
+++ b/charlas/asker/ecomputing.22/asker.pdf.html
@@ -79,6 +79,8 @@ for princexml (CSS3 paged media support)
 
 <ul>
   <li>Organización.</li>
+  <li>Software Libre</li>
+  <li>Lenguage de programación <strong>Ruby</strong></li>
   <li>Comunidad Asker <strong>Telegram</strong></li>
   <li>Equipo <strong>Teuton Software</strong></li>
 </ul>
@@ -95,7 +97,6 @@ for princexml (CSS3 paged media support)
 
 <ul>
   <li>David Vargas Ruiz</li>
-  <li>Ingeniero Informático por la ULPGC</li>
   <li>Profesor FP de Sistemas (IES Puerto de la Cruz).</li>
   <li>Ruby, software libre y StarWars.</li>
 </ul>
@@ -226,7 +227,7 @@ for princexml (CSS3 paged media support)
 
 <ul>
   <li>Fichero de texto.</li>
-  <li>Mapa conceptual sin enlaces explícitos.</li>
+  <li>Una especie de <em>“Mapa conceptual” sin enlaces explícitos</em>.</li>
   <li>Formato de entrada HAML y/o XML.</li>
 </ul>
 
